# libreconomy

./: .gitignore  Cargo.toml  README.md  basic_simulation.rs  build.rs  cbindgen.toml  rustfmt.toml  uniffi.toml
Reference/: coding-contract.md  project-summary.md  roadmap.md
benches/: simulation_bench.rs
docs/: ARCHITECTURE.md  GUIDE.md  TESTING.md  WASM.md
docs/ai/plans/: agents-research.md  market-sys-research.md  overall-research.md  phase-agent-core.md  reputation-research.md
docs/api/: FFI.md
docs/integrations/: godot-how-to.md
examples/: basic_simulation.rs  minimal_decision.rs  reputation_tracking.rs  simple_integration.rs  test-bitecs-api.html  test-wasm.html
examples/libreterra-p5js/: README.md  index.html  sketch.js
examples/libreterra-p5js/docs/: notes.md  tech-doc-libreterra.md
examples/libreterra-p5js/scripts/: README.md  server.js  (+1 more)
scripts/: build-wasm.sh  godot-update.sh  release.sh
src/: lib.rs  libreconomy.udl  world_query.rs
src/agent/: components.rs  creation.rs  identity.rs  mod.rs
src/decision/: mod.rs  types.rs  utility_maximizer.rs
src/events/: mod.rs
src/ffi/: components.rs  mod.rs  uniffi_impl.rs
src/items/: mod.rs  registry.rs
src/labor/: mod.rs
src/market/: mod.rs
src/production/: mod.rs
src/systems/: mod.rs  reputation.rs
src/wasm/: decision.rs  mod.rs  world.rs
tests/: agent_additional_components_phase6.rs  agent_components_phase2.rs  agent_core_phase1.rs  agent_creation_phase3.rs  basic_simulation.rs  ffi_completeness.rs  property_tests.proptest-regressions  property_tests.rs  uniffi_api.rs
(+19 files in other folders)
