[package]
name = "libreconomy"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = "0.18"
petgraph = "0.6"
rayon = { version = "1.5", optional = true }
uniffi = { version = "0.24", features = ["build"] }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
criterion = "0.5"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.24"

[[bench]]
name = "simulation_bench"
harness = false
